--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
   pull_request:
+    paths:
+      - 'src/**'
+      - '.github/workflows/test.yml'
 
 jobs:
   test:
