--- a/package.json
+++ b/package.json
@@ -33,18 +33,19 @@
 	},
 	"dependencies": {
 		"@hono/zod-openapi": "1.1.5",
-		"hono": "4.10.8"
+		"hono": "4.11.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
 		"@changesets/changelog-github": "0.5.2",
 		"@changesets/cli": "2.29.8",
 		"@hono/swagger-ui": "0.5.2",
+		"@types/node": "25.0.2",
 		"@vitest/coverage-v8": "4.0.15",
 		"drizzle-kit": "0.31.8",
 		"drizzle-orm": "0.45.1",
 		"drizzle-zod": "0.8.3",
-		"lefthook": "2.0.9",
+		"lefthook": "2.0.11",
 		"typescript": "5.9.3",
 		"vitest": "4.0.15",
 		"wrangler": "4.54.0",
