--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"test:watch": "vitest",
 		"test:coverage": "vitest run --coverage",
 		"version": "changeset version && bun i --lockfile-only",
-		"version:canary": "changeset version --snapshot canary --useCalculatedVersionForSnapshot && bun i --lockfile-only",
+		"version:canary": "changeset version --snapshot canary && bun i --lockfile-only",
 		"release": "changeset publish",
 		"release:canary": "changeset publish --tag canary --no-git-tag"
 	},
