--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings",
 		"typecheck": "tsc -p tsconfig.build.json --noEmit",
 		"generate": "drizzle-kit generate",
+		"migrate:dev": "wrangler d1 migrations apply hexcuit --local",
 		"test": "vitest run",
 		"test:watch": "vitest",
 		"test:coverage": "vitest run --coverage",
@@ -41,9 +42,9 @@
 		"@biomejs/biome": "2.3.9",
 		"@changesets/changelog-github": "0.5.2",
 		"@changesets/cli": "2.29.8",
-		"@cloudflare/vitest-pool-workers": "0.10.15",
+		"@cloudflare/vitest-pool-workers": "0.11.0",
 		"@hono/swagger-ui": "0.5.2",
-		"@types/node": "25.0.2",
+		"@types/node": "25.0.3",
 		"@vitest/coverage-istanbul": "3.2.4",
 		"drizzle-kit": "0.31.8",
 		"drizzle-orm": "0.45.1",
@@ -52,7 +53,7 @@
 		"tsup": "8.5.1",
 		"typescript": "5.9.3",
 		"vitest": "3.2.4",
-		"wrangler": "4.54.0",
+		"wrangler": "4.55.0",
 		"zod": "4.2.1"
 	}
 }
