--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 	"scripts": {
 		"dev": "wrangler dev",
 		"deploy": "wrangler deploy --minify",
-		"build": "tsup && tsc -p tsconfig.build.json --emitDeclarationOnly",
+		"build": "bun run generate:client && tsup",
+		"generate:client": "bun scripts/generate-client.ts",
 		"check": "biome check",
 		"check:fix": "biome check --fix --unsafe",
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings",
