--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"dev": "wrangler dev",
 		"deploy": "wrangler deploy --minify",
 		"build": "bun run generate:client && tsup",
-		"generate:client": "bun scripts/generate-client.ts",
+		"generate:client": "bun scripts/generate-client.ts && bun biome check --fix ./src/client.ts",
 		"check": "biome check",
 		"check:fix": "biome check --fix --unsafe",
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings",
@@ -36,15 +36,15 @@
 		"release:canary": "changeset publish --tag canary --no-git-tag"
 	},
 	"dependencies": {
-		"@hono/zod-openapi": "1.1.5",
+		"@hono/zod-openapi": "1.2.0",
 		"hono": "4.11.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.10",
 		"@changesets/changelog-github": "0.5.2",
 		"@changesets/cli": "2.29.8",
-		"@cloudflare/vitest-pool-workers": "0.11.0",
-		"@scalar/hono-api-reference": "0.9.28",
+		"@cloudflare/vitest-pool-workers": "0.11.1",
+		"@scalar/hono-api-reference": "0.9.30",
 		"@types/node": "25.0.3",
 		"@vitest/coverage-istanbul": "3.2.4",
 		"drizzle-kit": "0.31.8",
@@ -54,7 +54,7 @@
 		"tsup": "8.5.1",
 		"typescript": "5.9.3",
 		"vitest": "3.2.4",
-		"wrangler": "4.55.0",
+		"wrangler": "4.56.0",
 		"zod": "4.2.1"
 	}
 }
