refactor: migrate tests from Vitest to Bun and update test setup
- Updated bunfig.toml to include preload for test setup.
- Changed test scripts in package.json to use Bun instead of Vitest.
- Removed unused env.d.ts file and adjusted imports in test files to use the new setup.
- Implemented a new D1DatabaseAdapter for in-memory SQLite testing.
- Removed vitest.config.ts and replaced it with Bun-compatible test configurations.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
 		"lib": ["ESNext"],
 		"jsx": "react-jsx",
 		"jsxImportSource": "hono/jsx",
-		"types": ["./worker-configuration.d.ts", "vitest/globals", "@cloudflare/vitest-pool-workers"],
+		"types": ["./worker-configuration.d.ts", "@types/bun"],
 		"paths": {
 			"@/*": ["./src/*"]
 		}
