--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
 		"typecheck": "tsc --noEmit",
 		"generate": "drizzle-kit generate",
 		"migrate:dev": "wrangler d1 migrations apply hexcuit --local",
-		"test": "vitest run",
-		"test:watch": "vitest",
-		"test:coverage": "vitest run --coverage",
+		"test": "bun test",
+		"test:watch": "bun test --watch",
+		"test:coverage": "bun test --coverage",
 		"version": "changeset version && bun i --lockfile-only",
 		"version:canary": "changeset version --snapshot canary && bun i --lockfile-only",
 		"release": "changeset publish",
@@ -43,17 +43,15 @@
 		"@biomejs/biome": "2.3.10",
 		"@changesets/changelog-github": "0.5.2",
 		"@changesets/cli": "2.29.8",
-		"@cloudflare/vitest-pool-workers": "0.11.1",
 		"@scalar/hono-api-reference": "0.9.30",
+		"@types/bun": "1.3.5",
 		"@types/node": "25.0.3",
-		"@vitest/coverage-istanbul": "3.2.4",
 		"drizzle-kit": "0.31.8",
 		"drizzle-orm": "0.45.1",
 		"drizzle-zod": "0.8.3",
 		"lefthook": "2.0.12",
 		"tsup": "8.5.1",
 		"typescript": "5.9.3",
-		"vitest": "3.2.4",
 		"wrangler": "4.56.0",
 		"zod": "4.2.1"
 	}
