--- a/bunfig.toml
+++ b/bunfig.toml
@@ -3,3 +3,5 @@ exact = true
 
 [test]
 preload = ["./src/__tests__/setup.ts"]
+coverageSkipTestFiles = true
+coveragePathIgnorePatterns = ["**/__tests__/**"]
