--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: 1.3.4
+          bun-version: 1.3.5
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
@@ -28,3 +28,11 @@ jobs:
 
       - name: Type Check
         run: bun run typecheck
+
+      - name: Run Tests
+        run: bun test --coverage --coverage-reporter=lcov
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          files: ./coverage/lcov.info
