fix: update CI workflows to fail on coverage upload errors and enhance test execution

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -31,3 +31,12 @@ jobs:
 
       - name: Type Check
         run: bun run typecheck
+
+      - name: Run Tests
+        run: bun test --coverage --coverage-reporter=lcov
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          fail_ci_if_error: true
+          files: ./coverage/lcov.info
