--- a/package.json
+++ b/package.json
@@ -19,11 +19,9 @@
 	"scripts": {
 		"dev": "wrangler dev",
 		"build": "bun run generate:client && tsup",
-		"lint": "bun run lint:biome && bun run lint:knip",
-		"lint:biome": "biome check",
-		"lint:knip": "knip",
 		"check": "biome check",
 		"check:fix": "biome check --fix --unsafe",
+		"knip": "knip",
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings",
 		"generate:client": "bun scripts/generate-client.ts",
 		"typecheck": "tsc --noEmit",
@@ -51,7 +49,6 @@
 		"@libsql/client": "0.15.15",
 		"@types/bun": "1.3.5",
 		"@types/node": "25.0.3",
-		"@types/react": "19.2.7",
 		"drizzle-kit": "0.31.8",
 		"drizzle-orm": "0.45.1",
 		"drizzle-zod": "0.8.3",
