--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-	"cSpell.words": ["unranked"]
+	"cSpell.words": ["unranked"],
+	"files.watcherExclude": {
+		"**/client.ts": true
+	},
+	"search.exclude": {
+		"**/client.ts": true
+	},
+	"files.readonlyInclude": {
+		"**/client.ts": true
+	}
 }
