Add comprehensive tests for guild queue and user statistics endpoints
- Implement tests for leaving a queue, starting a queue, and creating a queue in the guilds API.
- Add tests for retrieving and deleting user statistics and match history.
- Ensure proper handling of edge cases such as non-existent queues, guilds, and user stats.
- Introduce pagination and ordering in rankings and match history retrieval.
- Set up Vitest configuration for testing with coverage reporting.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
 		"lib": ["ESNext"],
 		"jsx": "react-jsx",
 		"jsxImportSource": "hono/jsx",
-		"types": ["./worker-configuration.d.ts", "@types/bun"],
+		"types": ["./worker-configuration.d.ts"],
 		"paths": {
 			"@/*": ["./src/*"],
 			"@test/*": ["./test/*"]
