--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
           git diff --exit-code drizzle/
 
       - name: Run Tests
-        run: bun test --coverage --coverage-reporter=lcov
+        run: bun vitest run --coverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5.5.2
