--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings",
 		"generate:client": "bun scripts/generate-client.ts",
 		"typecheck": "tsc --noEmit",
+		"typecheck:native": "tsgo --noEmit",
 		"generate": "drizzle-kit generate",
 		"migrate:dev": "wrangler d1 migrations apply hexcuit --local",
 		"db:studio": "drizzle-kit studio --config drizzle.config.local.ts",
-		"test": "bun test",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:coverage": "vitest run --coverage",
 		"check:routes": "bun scripts/check-routes.ts",
 		"check:routes:fix": "bun scripts/check-routes.ts --fix",
-		"test:coverage": "bun test --coverage",
 		"version": "changeset version && bun i --lockfile-only",
 		"version:canary": "changeset version --snapshot canary && bun i --lockfile-only",
 		"release": "changeset publish",
@@ -48,17 +50,21 @@
 		"@changesets/changelog-github": "0.5.2",
 		"@changesets/cli": "2.29.8",
 		"@hono/swagger-ui": "0.5.3",
-		"@libsql/client": "0.15.15",
-		"@types/bun": "1.3.5",
+		"@libsql/client": "0.17.0",
+		"@types/better-sqlite3": "7.6.13",
 		"@types/node": "25.0.3",
+		"@typescript/native-preview": "7.0.0-dev.20260107.1",
+		"@vitest/coverage-v8": "4.0.16",
+		"better-sqlite3": "12.5.0",
 		"drizzle-kit": "0.31.8",
 		"drizzle-orm": "0.45.1",
 		"drizzle-zod": "0.8.3",
-		"knip": "5.79.0",
+		"knip": "5.80.0",
 		"lefthook": "2.0.13",
 		"tsup": "8.5.1",
 		"typescript": "5.9.3",
-		"wrangler": "4.54.0",
+		"vitest": "4.0.16",
+		"wrangler": "4.57.0",
 		"zod": "4.3.5"
 	}
 }
