--- a/package.json
+++ b/package.json
@@ -56,15 +56,15 @@
 		"@typescript/native-preview": "7.0.0-dev.20260107.1",
 		"@vitest/coverage-v8": "4.0.16",
 		"better-sqlite3": "12.5.0",
-		"drizzle-kit": "0.31.8",
-		"drizzle-orm": "0.45.1",
-		"drizzle-zod": "0.8.3",
-		"knip": "5.80.0",
+		"drizzle-kit": "1.0.0-beta.9-e89174b",
+		"drizzle-orm": "1.0.0-beta.9-e89174b",
+		"drizzle-zod": "1.0.0-beta.9-e89174b",
+		"knip": "5.80.1",
 		"lefthook": "2.0.13",
 		"tsup": "8.5.1",
 		"typescript": "5.9.3",
 		"vitest": "4.0.16",
-		"wrangler": "4.57.0",
+		"wrangler": "4.58.0",
 		"zod": "4.3.5"
 	}
 }
