feat: update wrangler configuration and add setup actions
- Updated `wrangler.jsonc` to include a trailing comma for better JSON formatting.
- Added a new GitHub Action in `.github/actions/setup/action.yml` to set up Bun and install dependencies.
- Created `.oxfmtrc.json` for formatting configuration with specific rules.
- Created `.oxlintrc.json` for linting configuration with plugins and ignore patterns.
- Added `.vscode/extensions.json` to recommend the OXC VSCode extension.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
 	"cSpell.words": ["unranked"],
+	"editor.defaultFormatter": "oxc.oxc-vscode",
+	"editor.codeActionsOnSave": {
+		"source.fixAll.oxc": "always"
+	},
+	"oxc.typeAware": true,
 	"files.watcherExclude": {
 		"**/client.ts": true
 	},
