--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -3,71 +3,71 @@
 
 database:
   - changed-files:
-    - any-glob-to-any-file:
-      - src/db/**
-      - drizzle.config.ts
-      - drizzle/**
+      - any-glob-to-any-file:
+          - src/db/**
+          - drizzle.config.ts
+          - drizzle/**
 
 middleware:
   - changed-files:
-    - any-glob-to-any-file:
-      - src/middlewares/**
+      - any-glob-to-any-file:
+          - src/middlewares/**
 
 routes:
   - changed-files:
-    - any-glob-to-any-file:
-      - src/routes/**
+      - any-glob-to-any-file:
+          - src/routes/**
 
 client:
   - changed-files:
-    - any-glob-to-any-file:
-      - src/client.ts
+      - any-glob-to-any-file:
+          - src/client.ts
 
 ci-cd:
   - changed-files:
-    - any-glob-to-any-file:
-      - .github/**
+      - any-glob-to-any-file:
+          - .github/**
 
 dependencies:
   - changed-files:
-    - any-glob-to-any-file:
-      - package.json
-      - bun.lock
+      - any-glob-to-any-file:
+          - package.json
+          - bun.lock
 
 documentation:
   - changed-files:
-    - any-glob-to-any-file:
-      - README.md
-      - CHANGELOG.md
-      - LICENSE
+      - any-glob-to-any-file:
+          - README.md
+          - CHANGELOG.md
+          - LICENSE
 
 utils:
   - changed-files:
-    - any-glob-to-any-file:
-      - src/utils/**
+      - any-glob-to-any-file:
+          - src/utils/**
 
 tests:
   - changed-files:
-    - any-glob-to-any-file:
-      - src/**/*.test.ts
+      - any-glob-to-any-file:
+          - src/**/*.test.ts
 
 scripts:
   - changed-files:
-    - any-glob-to-any-file:
-      - scripts/**
+      - any-glob-to-any-file:
+          - scripts/**
 
 core:
   - changed-files:
-    - any-glob-to-any-file:
-      - src/index.ts
-      - src/constants/**
+      - any-glob-to-any-file:
+          - src/index.ts
+          - src/constants/**
 
 configuration:
   - changed-files:
-    - any-glob-to-any-file:
-      - "*.config.*"
-      - "*.jsonc"
-      - tsconfig.json
-      - biome.jsonc
-      - wrangler.jsonc
-      - lefthook.json
+      - any-glob-to-any-file:
+          - '*.config.*'
+          - '*.jsonc'
+          - tsconfig.json
+          - biome.jsonc
+          - wrangler.jsonc
+          - lefthook.json
