--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,13 +1,13 @@
 # Automatically labels PRs based on the configuration file
 # you are probably looking for 👉 `.github/labeler.yml`
-name: "Pull Request Labeler"
+name: 'Pull Request Labeler'
 
 on:
   - pull_request_target
 
 jobs:
   triage:
-    permissions: 
+    permissions:
       contents: read
       pull-requests: write
     runs-on: ubuntu-latest
