--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
 	"name": "@hexcuit/server",
 	"version": "0.11.1",
-	"type": "module",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
@@ -10,28 +9,31 @@
 	"files": [
 		"dist"
 	],
+	"type": "module",
 	"exports": {
 		".": {
-			"import": "./dist/client.js",
-			"types": "./dist/client.d.ts"
+			"types": "./dist/client.d.ts",
+			"import": "./dist/client.js"
 		}
 	},
 	"scripts": {
 		"dev": "wrangler dev",
 		"build": "bun run generate:client && tsup",
-		"check": "biome check",
-		"check:fix": "biome check --fix --unsafe",
+		"check": "bun run lint && bun run format && bun run knip",
+		"lint": "oxlint --type-aware --type-check",
+		"format": "oxfmt --check",
 		"knip": "knip",
+		"check:fix": "bun run lint:fix && bun run format:fix && bun run knip:fix",
+		"lint:fix": "oxlint --fix --type-aware --type-check",
+		"format:fix": "oxfmt",
+		"knip:fix": "knip --fix",
+		"test": "vitest --run",
+		"test:coverage": "vitest --run --coverage",
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings",
 		"generate:client": "bun scripts/generate-client.ts",
-		"typecheck": "tsc --noEmit",
-		"typecheck:native": "tsgo --noEmit",
 		"generate": "drizzle-kit generate",
 		"migrate:dev": "wrangler d1 migrations apply hexcuit --local",
 		"db:studio": "drizzle-kit studio --config drizzle.config.local.ts",
-		"test": "vitest run",
-		"test:watch": "vitest",
-		"test:coverage": "vitest run --coverage",
 		"check:routes": "bun scripts/check-routes.ts",
 		"check:routes:fix": "bun scripts/check-routes.ts --fix",
 		"version": "changeset version && bun i --lockfile-only",
@@ -44,7 +46,6 @@
 		"hono": "4.11.3"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.3.11",
 		"@cf-wasm/resvg": "0.3.3",
 		"@cf-wasm/satori": "0.3.3",
 		"@changesets/changelog-github": "0.5.2",
@@ -53,7 +54,6 @@
 		"@libsql/client": "0.17.0",
 		"@types/better-sqlite3": "7.6.13",
 		"@types/node": "25.0.3",
-		"@typescript/native-preview": "7.0.0-dev.20260107.1",
 		"@vitest/coverage-v8": "4.0.16",
 		"better-sqlite3": "12.5.0",
 		"drizzle-kit": "1.0.0-beta.9-e89174b",
@@ -61,6 +61,9 @@
 		"drizzle-zod": "1.0.0-beta.9-e89174b",
 		"knip": "5.80.1",
 		"lefthook": "2.0.13",
+		"oxfmt": "0.23.0",
+		"oxlint": "1.38.0",
+		"oxlint-tsgolint": "0.10.1",
 		"tsup": "8.5.1",
 		"typescript": "5.9.3",
 		"vitest": "4.0.16",
