--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,14 +4,14 @@
 	"main": "src/index.ts",
 	"compatibility_date": "2025-11-11",
 	"observability": {
-		"enabled": true
+		"enabled": true,
 	},
 	"d1_databases": [
 		{
 			"binding": "DB",
 			"database_name": "hexcuit",
 			"database_id": "a20ff5ef-8539-444c-8098-e92ffa65d32b",
-			"migrations_dir": "drizzle"
-		}
-	]
+			"migrations_dir": "drizzle",
+		},
+	],
 }
