--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,11 @@ jobs:
 
       - name: Check drizzle migrations are up to date
         run: |
-          bun run generate
+          bun run generate:migration
           git diff --exit-code drizzle/
+
+      - name: Build
+        run: bun run build
 
   test:
     runs-on: ubuntu-latest
