--- a/package.json
+++ b/package.json
@@ -20,26 +20,21 @@
 		"dev": "wrangler dev",
 		"build": "bun run generate:client && tsup",
 		"check": "bun run lint && bun run format && bun run knip",
-		"lint": "oxlint --type-aware --type-check",
-		"format": "oxfmt --check",
-		"knip": "knip",
 		"check:fix": "bun run lint:fix && bun run format:fix && bun run knip:fix",
+		"lint": "oxlint --type-aware --type-check",
 		"lint:fix": "oxlint --fix --type-aware --type-check",
+		"format": "oxfmt --check",
 		"format:fix": "oxfmt",
+		"knip": "knip",
 		"knip:fix": "knip --fix",
 		"test": "vitest --run",
 		"test:coverage": "vitest --run --coverage",
-		"cf-typegen": "wrangler types --env-interface CloudflareBindings",
+		"changeset": "changeset",
+		"generate:migration": "drizzle-kit generate",
 		"generate:client": "bun scripts/generate-client.ts",
-		"generate": "drizzle-kit generate",
-		"migrate:dev": "wrangler d1 migrations apply hexcuit --local",
-		"db:studio": "drizzle-kit studio --config drizzle.config.local.ts",
-		"check:routes": "bun scripts/check-routes.ts",
-		"check:routes:fix": "bun scripts/check-routes.ts --fix",
-		"version": "changeset version && bun i --lockfile-only",
-		"version:canary": "changeset version --snapshot canary && bun i --lockfile-only",
-		"release": "changeset publish",
-		"release:canary": "changeset publish --tag canary --no-git-tag"
+		"generate:types": "wrangler types --env-interface CloudflareBindings",
+		"db:migrate:dev": "wrangler d1 migrations apply hexcuit --local",
+		"db:studio": "drizzle-kit studio --config drizzle.config.local.ts"
 	},
 	"dependencies": {
 		"@hono/zod-openapi": "1.2.0",
