--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -1,6 +1,12 @@
 name: Setup
 description: Setup Bun and install dependencies
 
+inputs:
+  node:
+    description: 'Setup Node.js for npm publishing'
+    required: false
+    default: 'false'
+
 runs:
   using: composite
   steps:
@@ -8,6 +14,13 @@ runs:
       uses: oven-sh/setup-bun@v2
       with:
         bun-version: 1.3.5
+
+    - name: Setup Node
+      if: inputs.node == 'true'
+      uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f # v6.1.0
+      with:
+        node-version: '24.12.0'
+        registry-url: 'https://registry.npmjs.org'
 
     - name: Install dependencies
       run: bun install --frozen-lockfile
