--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,20 +42,15 @@ jobs:
       - name: Checkout tag
         run: git checkout ${{ steps.get_tag.outputs.tag }}
 
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: 1.3.5
-
-      - name: Install dependencies
-        run: bun install --frozen-lockfile
+      - name: Setup
+        uses: ./.github/actions/setup
 
       - name: Build
         run: bun run build
 
       - name: Generate Drizzle kit
         if: ${{ inputs.run_migrations }}
-        run: bun run generate
+        run: bun run generate:migration
 
       - name: D1 Migrations
         if: ${{ inputs.run_migrations }}
