--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,19 +21,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
 
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
+      - name: Setup
+        uses: ./.github/actions/setup
         with:
-          bun-version: 1.3.5
-
-      - name: Setup Node
-        uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f # v6.1.0
-        with:
-          node-version: '24.12.0'
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: Install dependencies
-        run: bun install --frozen-lockfile
+          node: 'true'
 
       - name: Build
         run: bun run build
@@ -42,8 +33,8 @@ jobs:
         id: changesets
         uses: changesets/action@e0145edc7d9d8679003495b11f87bd8ef63c0cba # v1.5.3
         with:
-          version: bun run version
-          publish: bun run release
+          version: bun changeset version && bun i --lockfile-only
+          publish: bun changeset publish
           commit: 'ci release'
           title: 'ci release'
         env:
@@ -51,7 +42,7 @@ jobs:
 
       - name: Generate Drizzle kit
         if: steps.changesets.outputs.published == 'true'
-        run: bun run generate
+        run: bun run generate:migration
 
       - name: D1 Migrations
         if: steps.changesets.outputs.published == 'true'
@@ -85,22 +76,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
 
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
+      - name: Setup
+        uses: ./.github/actions/setup
         with:
-          bun-version: 1.3.5
-
-      - name: Setup Node
-        uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f # v6.1.0
-        with:
-          node-version: '24.12.0'
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: Install dependencies
-        run: bun install --frozen-lockfile
+          node: 'true'
 
       - name: Version Canary
-        run: bun run version:canary
+        run: bun changeset version --snapshot canary && bun i --lockfile-only
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -108,4 +90,4 @@ jobs:
         run: bun run build
 
       - name: Publish Canary
-        run: bun run release:canary
+        run: bun changeset publish --tag canary --no-git-tag
