feat: add route generator script and auto-generate routes index file
- Implemented a script to scan route files and generate src/routes/index.ts
- The script identifies HTTP method files and constructs route paths and import names
- Automatically generates and sorts route registrations in the index file
- Updated src/routes/index.ts with generated routes for the API endpoints

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,11 @@ jobs:
           bun run generate:client
           git diff --exit-code src/client.ts
 
+      - name: Check generated routes is up to date
+        run: |
+          bun run generate:routes
+          git diff --exit-code src/routes/index.ts
+
       - name: Check drizzle migrations are up to date
         run: |
           bun run generate:migration
