refactor: update VSCode settings to exclude additional files from watcher and search

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,12 +6,18 @@
 	},
 	"oxc.typeAware": true,
 	"files.watcherExclude": {
-		"**/client.ts": true
+		"**/worker-configuration.d.ts": true,
+		"**/src/client.ts": true,
+		"**/src/routes/index.ts": true
 	},
 	"search.exclude": {
-		"**/client.ts": true
+		"**/worker-configuration.d.ts": true,
+		"**/src/client.ts": true,
+		"**/src/routes/index.ts": true
 	},
 	"files.readonlyInclude": {
-		"**/client.ts": true
+		"**/worker-configuration.d.ts": true,
+		"**/src/client.ts": true,
+		"**/src/routes/index.ts": true
 	}
 }
