--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
 		"test:coverage": "vitest --run --coverage",
 		"changeset": "changeset",
 		"generate:migration": "drizzle-kit generate",
-		"generate:client": "bun scripts/generate-client.ts",
-		"generate:routes": "bun scripts/generate-routes.ts",
+		"generate:client": "bun scripts/generate-client.ts --fix",
+		"generate:routes": "bun scripts/generate-routes.ts --fix",
+		"fix:route-paths": "bun scripts/fix-route-paths.ts --fix",
 		"generate:types": "wrangler types --env-interface CloudflareBindings",
 		"db:migrate:dev": "wrangler d1 migrations apply hexcuit --local",
 		"db:studio": "drizzle-kit studio --config drizzle.config.local.ts"
