refactor(ci): add route paths consistency check and update scripts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Check generated routes is up to date
         run: bun scripts/generate-routes.ts
 
+      - name: Check route paths consistency
+        run: bun scripts/fix-route-paths.ts
+
       - name: Check drizzle migrations are up to date
         run: |
           bun run generate:migration
