--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,5 +1,5 @@
 {
 	"$schema": "./node_modules/oxlint/configuration_schema.json",
-	"plugins": ["import", "promise"],
+	"plugins": ["eslint", "typescript", "unicorn", "oxc", "import", "promise"],
 	"ignorePatterns": ["worker-configuration.d.ts"]
 }
