--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
 		"generate:routes": "bun scripts/generate-routes.ts --fix",
 		"fix:route-paths": "bun scripts/fix-route-paths.ts --fix",
 		"generate:types": "wrangler types --env-interface CloudflareBindings",
-		"db:migrate:dev": "wrangler d1 migrations apply hexcuit --local",
-		"db:studio": "drizzle-kit studio --config drizzle.config.local.ts"
+		"db:studio": "drizzle-kit studio"
 	},
 	"dependencies": {
 		"@hono/zod-openapi": "1.2.0",
@@ -47,12 +46,11 @@
 		"@cf-wasm/satori": "0.3.3",
 		"@changesets/changelog-github": "0.5.2",
 		"@changesets/cli": "2.29.8",
+		"@electric-sql/pglite": "0.3.15",
 		"@hono/swagger-ui": "0.5.3",
 		"@libsql/client": "0.17.0",
-		"@types/better-sqlite3": "7.6.13",
-		"@types/node": "25.0.8",
+		"@types/node": "25.0.9",
 		"@vitest/coverage-v8": "4.0.17",
-		"better-sqlite3": "12.6.0",
 		"drizzle-kit": "1.0.0-beta.9-e89174b",
 		"drizzle-orm": "1.0.0-beta.9-e89174b",
 		"drizzle-zod": "1.0.0-beta.9-e89174b",
@@ -60,11 +58,12 @@
 		"lefthook": "2.0.15",
 		"oxfmt": "0.24.0",
 		"oxlint": "1.39.0",
-		"oxlint-tsgolint": "0.11.0",
+		"oxlint-tsgolint": "0.11.1",
+		"postgres": "3.4.8",
 		"tsup": "8.5.1",
 		"typescript": "5.9.3",
 		"vitest": "4.0.17",
-		"wrangler": "4.59.1",
+		"wrangler": "4.59.2",
 		"zod": "4.3.5"
 	}
 }
