fix(release): update changeset version command to remove unnecessary bash invocation

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
         id: changesets
         uses: changesets/action@e0145edc7d9d8679003495b11f87bd8ef63c0cba # v1.5.3
         with:
-          version: bash -c 'bun changeset version && bun i --lockfile-only'
+          version: bun changeset version
           publish: bun changeset publish
           commit: 'ci release'
           title: 'ci release'
